@@ -18,7 +18,7 @@ indexes:
   - name: creationdate
     direction: desc
 
-# Used 13 times in query history.
+# Used once in query history.
 - kind: Game
   properties:
   - name: owner
@@ -51,7 +51,7 @@ indexes:
   - name: cc_country
   - name: cc_score
 
-# Used once in query history.
+# Unused in query history -- copied from input.
 - kind: Score
   ancestor: yes
   properties:
@@ -104,7 +104,7 @@ indexes:
   - name: cc_game
   - name: cc_score
 
-# Used 24 times in query history.
+# Unused in query history -- copied from input.
 - kind: Score
   ancestor: yes
   properties:
@@ -120,7 +120,7 @@ indexes:
   - name: cc_category
   - name: cc_score
 
-# Used 40 times in query history.
+# Unused in query history -- copied from input.
 - kind: Score
   ancestor: yes
   properties:
