@@ -9,6 +9,7 @@
 {% block content %}
 <p>This is a list of all games currently using Cocos Live for online score submissions:</p>
 
+<p>Total number of games: {{total}}</p>
 <table class="stats">
 <thead>
   <tr class="head"><th>Icon</th><th>View High Scores</th><th>Total number of Scores</th></tr>
